# printbits

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
printbits/: bitmanip.py  cli.py
